2007-02-14  Jim Lynch <jim@jam.sessionsnet.org>
	* correct a situation where the POSTGRES variable was prematurely
	overwritten. It specifies either where to find a postgres install, 
	or else how to find it. The author of the overwriting code wanted
	to try a pair of standard locations for postgres; as a result of
	my changes it makes those checks only if the POSTGRES variable
	never received a value on the command line.

2007-02-14  Jim Lynch <jim@jam.sessionsnet.org>
	* Hi everybody!
	* This is my first attempt to extend the build system: here, 
	I added "POSTGRES=SEPARATELY PGLIB=... PGINC=..." and
	"POSTGRES=PG_CONFIG".

2003-03-29  Scott Goodwin  <scott@scottg.net>

	* Makefile: Fixed problem where if AS3 was not set, -lnsdb was not
	being added to library list.

	* Makefile: Added OPENSSL setting to allow you to specify where
	OPENSSL is installed. This is required when compiling nspostgres
	against a PostgreSQL installation that has been compiled with OpenSSL.
	If you get lots of undefined symbols that look like _SSL, _PEM and so
	on, then you need this flag.

2004-02-04  Lamar Owen <lowen@pari.edu>
	* Roll a 4.0 tarball.
	* Tag the 4.0 release.

2003-10-02  Scott Goodwin  <scott@scottg.net>

	* Makefile: extra spaces at the end of one of the lines in the
        check-env target were causing make failure. Error given was:

        /bin/sh: -c: line 2: syntax error: unexpected end of file
        make: *** [check-env] Error 2

2003-09-27  Lamar Owen <lowen@pari.edu>

	* Added -lnsdb for AOLserver 4
	* Added AS3 define for Makefile for building with AOLserver 3

2003-02-17  Lamar Owen <lamar.owen@wgcr.org>

	* tagged and released 4.0beta1

2003-01-09  Lamar Owen <lamar.owen@wgcr.org>
	
	* nspostgres.h: changed include order and conditionals for
	AOLserver 4 use.

2002-12-23  Lamar Owen <lamar.owen@wgcr.org>

	* nspostgres release 3.5 Official

2002-12-18  Lamar Owen <lamar.owen@wgcr.org>

	* nspostgres.h and nspostgres.c: corrected some misinformation